--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,11 +20,14 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.0.1'
+    compile 'com.android.support:appcompat-v7:25.3.0'
     testCompile 'junit:junit:4.12'
     compile project(':library')
+    compile 'com.android.support:recyclerview-v7:25.3.0'
+    compile 'com.alibaba:fastjson:1.2.32'
+    compile 'com.android.support:cardview-v7:25.3.0'
 }
